--- a/DemoShopFE/src/app/component/admin/product/product.component.html
+++ b/DemoShopFE/src/app/component/admin/product/product.component.html
@@ -1,28 +1,28 @@
-<h4 class="card-title">Product</h4>
 
-<input class="btn btn-success" type="button" value="Thêm mới" data-bs-toggle="modal" data-bs-target="#myModal">
+<h4 class="card-title">Product</h4>
+<h5> <button class="btn btn-primary" data-bs-dismiss="modal" routerLink="/addproduct" >Add Product</button></h5>
+
+<!-- <input class="btn btn-success" type="button" value="Thêm mới" data-bs-toggle="modal" data-bs-target="#myModal"> -->
 <div class="modal fade" id="myModal" (hidden.bs.modal)="resetForm()" >
     <form class="modal-dialog" [formGroup]="productForm" (ngSubmit)="onSubmit()" >
       <div class="modal-content">
-        <!-- Modal Header -->
+    
         <div class="modal-header">
-          <h4 class="modal-title">Thêm mới danh mục</h4>
+          <!-- <h4 class="modal-title">Thêm mới danh mục</h4> -->
           <button type="button" class="btn-close"  data-bs-dismiss="modal" ></button>
         </div>
-  
-        <!-- Modal body -->
         <div class="modal-body">
           <div class="mb-3">
             <label for="" class="form-label" >Stt</label>
-            <input type="text"  class="form-control" formControlName="id" placeholder="id">
+            <input type="text"  class="form-control" formControlName="id"  placeholder="id">
           </div>
           <div class="mb-3">
             <label for="" class="form-label" >Name</label>
-            <input type="text"  class="form-control" formControlName="name" placeholder="name">
+            <input type="text"  class="form-control" formControlName="name" name ="name" id="" placeholder="name">
           </div>
           <div class="mb-3">
-            <label for="" class="form-label" >Name</label>
-            <input type="text"  class="form-control" formControlName="description" placeholder="description">
+            <label for="" class="form-label" >description</label>
+            <input type="text"  class="form-control"   formControlName="description" placeholder="description">
           </div>
           <div class="mb-3">
             <label for="" class="form-label" >image_url</label>
@@ -58,20 +58,18 @@
       </div>
     </form>
   </div>
-  
-
-
   <table class="table table-striped">
     <thead>
       <tr class="text-center">
         <th>Stt</th>
         <th>Name</th>
-        <th>image_url</th>
+        <th>Image_url</th>
         <th>Price</th>
         <th>Quantity</th>
-        <th>description</th>
+        <th>vescription</th>
         <th>brand</th>
-        <th>material</th>
+        <th>Material</th>
+        <th>Color</th>
         <th>Action</th>
       </tr>
     </thead>
@@ -79,19 +77,20 @@
       <tr *ngFor="let item of listProduct">
         <td>{{item.id}}</td>
         <td>{{item.name}}</td>
-        <td><img src="{{ item.image_url }}" width="100px" /></td>
+        <td><img src="{{ item.image_url }}"width="100px" /></td>
         <td>{{item.price}}</td>
         <td>{{item.quantity}}</td>
         <td>{{item.description}}</td>
         <td>{{item.brand}}</td>
         <td>{{item.material}}</td>
-        
+        <td>{{item.color}}</td>
         <td>
-            <!-- <img [src]="'http://localhost:8080/uploads/' + item.thumbnail" width="100" alt=""> -->
-        </td>
-        <td>
-          <button type="button" (click)="editCategory(item)"  class="btn btn-info text-light" data-bs-toggle="modal" data-bs-target="#myModal">Edit</button>
-          <button type="button" (click)="getDeleteId(item.id)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger text-light ms-2">Delete</button>
+          
+          <button type="button"class="btn btn-primary" data-bs-dismiss="modal" routerLink="/editproduct/{{item.id}}">Editst</button>
+          <br>
+          <br>
+          <button type="button"class="btn btn-primary" (click)="getDeleteId(item.id)" data-bs-toggle="modal" data-bs-target="#deleteModal" class="btn btn-danger text-light">Delete</button>
+          <!-- <button type="button" (click)="getDeleteId(item.id)" class="btn btn-danger text-light ms-2" data-bs-toggle="modal" data-bs-target="#deleteModal">Edit</button> -->
         </td>
       </tr>
     </tbody>
