--- a/DemoShopFE/src/app/component/client/cart/cart.component.html
+++ b/DemoShopFE/src/app/component/client/cart/cart.component.html
@@ -230,8 +230,8 @@
             <strong>{{cartService.totalPrice }} USD</strong>
           </li>
         </ul>
-        <button class="w-100 btn btn-primary btn-lg " routerLink="cart" type="submit">Giỏ hàng</button>
-        <button class="w-100 btn btn-primary btn-lg mt-2" data-bs-dismiss="offcanvas" aria-label="Close">Tiếp tục xem</button>
+        <button class="w-100 btn btn-primary btn-lg " routerLink="cart" type="submit">Card</button>
+        <button class="w-100 btn btn-primary btn-lg mt-2" data-bs-dismiss="offcanvas" aria-label="Close">Continue watching</button>
       </div>
     </div>
 </div>
