--- a/DemoShopFE/src/app/component/client/index/index.component.html
+++ b/DemoShopFE/src/app/component/client/index/index.component.html
@@ -56,8 +56,9 @@
               </a>
             </li>
             <li>
-              <a href="#" class="rounded-circle bg-light p-2 mx-1 text-dark">
-                <svg width="24" height="24" viewBox="0 0 24 24"><use xlink:href="#heart"></use></svg>
+
+            <li>
+              <a (click)="onLogout()" ><img src="https://img.icons8.com/?size=1x&id=2445&format=png"width="24px" height="24px" style="margin-left: 20px;" class="img-fluid">
               </a>
             </li>
             <li class="d-lg-none">
@@ -104,7 +105,6 @@
                   <option>Drinks</option>
                   <option>Chocolates</option>
                 </select>
-            
                 <ul class="navbar-nav justify-content-end menu-list list-unstyled d-flex gap-md-3 mb-0">
                   <li class="nav-item active">
                     <a href="#women" class="nav-link">Women</a>
@@ -154,6 +154,10 @@
 </header>
 
 
+
+
+
+
 <div class="container">
   <div class="banner-blocks">
     <div class="block-1 ">
@@ -194,28 +198,67 @@
 </div>
 
 <div class="container mt-5">
-  
- <div class="row">
-    <div class="col-3" *ngFor="let item of listProduct">
-      <div class="card" style="width: 18rem;">
-        <img  src="{{item.image_url}}"class="card-img-top" style="width: 200px" />
-        <div class="card-body">
-          <h5 class="card-title">{{item.name}}</h5>
-          <h5 class="card-title">{{item.brand}}</h5>
-          <p class="card-text">{{item.price | currency:'USD'}}</p>
-          <a href="#" (click)="addToCart(item)" class="btn btn-primary" style="background-color: #007bff;">Add to cart</a>
-<button routerLink="productdetails/:id" class="btn btn-primary" style="background-color: #dc3545; margin-left: 15px;">View product</button>
-        </div>
+ 
+ <section class="bg-color">
+  <div class="containers">
+      <div class="title">
+          <p>The Best Seller Of Hitheme</p>
+          <h2><span>Best</span> Seller</h2>
       </div>
-    </div>
- </div>
+      <div class="row">
+          <div class="col-md-3" *ngFor="let item of listProduct" >
+              <div class="card">
+                  <div class="card-main">
+                      <div class="discount">-9%</div>
+                      <div class="label label-green">Pre-order</div>
+                      <!-- <div class="product-container">
+                          <div class="p" (mouseover)="imageChange($event)"><img src="../assets/img1.jpg"
+                                  alt="Product"></div>
+                          <div class="p" (mouseover)="imageChange($event)"><img src="../assets/img2.jpg"
+                                  alt="Product"></div>
+                          <div class="p" (mouseover)="imageChange($event)"><img src="../assets/img3.jpg"
+                                  alt="Product"></div>
+                      </div> -->
+                      <div class="image">
+                          <img src="{{item.image_url}}" alt="Product">
+                      </div>
+                      <div class="cart-line"></div>
+                      <div class="cart-item">
+                          <ul>
+                              <li><a href=""(click)="addToCart(item)"><i class="fa fa-shopping-basket"></i></a></li>
+                              <li><a routerLink="/product/{{item.id}}"><i class="fa fa-heart"></i></a></li>
+                              <li><a href=""><i class="fa fa-search"></i></a></li>
+                          </ul>
+                      </div>
+                  </div>
+                  <div class="content">
+                      <a href="javascript:void(0);">{{item.name}}</a>
+                      <div class="rating">
+                          <i class="fa fa-star-o"></i>
+                          <i class="fa fa-star-o"></i>
+                          <i class="fa fa-star-o"></i>
+                          <i class="fa fa-star-o"></i>
+                          <i class="fa fa-star-o"></i>
+                      </div>
+                      <p><span class="money">{{item.price | currency:'USD'}}</span></p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
  
 </div>
 <ul>
-  <li *ngFor="let item of items | paginate: { itemsPerPage: 1, currentPage: p }"></li>
+  <li *ngFor="let item of items | paginate: { itemsPerPage: 2, currentPage: p }"></li>
 </ul>
 
 <pagination-controls (pageChange)="p = $event"></pagination-controls>
+
+
+
+
+
 
 
 
@@ -226,7 +269,7 @@
     <div class="offcanvas-body">
       <div class="order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-primary">Your cart</span>
+          <span class="text-primary">Giỏ hàng của bạn</span>
           <span class="badge bg-primary rounded-pill">{{cartService.items.length}}</span>
         </h4>
         <ul class="list-group mb-3">
@@ -234,11 +277,11 @@
             <div>
               <h6 class="my-0">{{item.name}}</h6>
               <br>
-              <h6 class="my-0">quantity {{item.quantity}}</h6>
+              <h6 class="my-0">Số Lượng {{item.quantity}}</h6>
               <br>
               <small class="text-body-secondary">{{item.description}}</small>
             </div>
-            <span class="text-body-secondary">{{item.price * item.quantity | currency:'USD'}}</span>
+            <span class="text-body-secondary">{{item.price | currency:'USD'}}</span>
             <button type="button" class="btn-close" (click)="removeFromCart(item)"style="margin-left: 15px;"></button>
           </li>
           <li class="list-group-item d-flex justify-content-between">
@@ -252,3 +295,112 @@
     </div>
     
 </div>
+
+
+
+
+
+<section class="policy">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="policy-card">
+          <div class="round">
+            <div class="round-icon">
+              <i class="fa fa-car"></i>
+            </div>
+          </div>
+          <h2>
+            Free shipping &amp; 
+            To return</h2>
+          <p>
+            Free shipping nationwide</p>
+        </div>
+
+      </div>
+      <div class="col-md-4">
+                <div class="policy-card">
+          <div class="round">
+            <div class="round-icon">
+              <i class="fa fa-gift"></i>
+            </div>
+          </div>
+          <h2>
+            present &amp;
+            promotion</h2>
+          <p>
+            Many parts are too attractive to buy and come with promotions</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+                <div class="policy-card">
+          <div class="round">
+            <div class="round-icon">
+              <i class="fa fa-phone"></i>
+            </div>
+          </div>
+          <h2>24/7 customer support</h2>
+          <p>
+            We support our customers at all times</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+</section>
+
+<section class="policy-product">
+  <div class="containers">
+    <div class="row">
+      <div class="col-md-4">
+          <div class="policy-p-card">
+            <div class="date">
+              <h3>3</h3>
+              <h4>Jun</h4>
+            </div>
+            <div class="policy-img">
+                <!-- <img src="../../assets/img/p1.png" alt="P1"> -->
+            </div>
+            <h2>Olym Pianus </h2>
+            <p>HOT! A new month with many delicious deals is waiting for you. If you are in need of a luxury, genuine, and smooth smartphone, you should not ignore Samsung's Galaxy Z series super product. In particular, when buying Galaxy Z series at an irresistible price, you can also get a discount of up to 11 million VND, which is very good, my friend. Let's find out with this article!</p>
+            <a href="" class="read-more">
+              Read more <i class="fa fa-caret-right"></i></a>
+          </div>
+      </div>
+      <div class="col-md-4">
+        <div class="policy-p-card">
+          <div class="date">
+            <h3>25</h3>
+            <h4>Jun</h4>
+          </div>
+          <div class="policy-img">
+          </div>
+          <h2>Orient</h2>
+          <p>This is a product with a full stone design, hidden bezel with 6 I-screws, combined with clear sapphire glass. This watch model possesses a sleek, sparkling, luxurious beauty that attracts every customer at first sight.
+            Inside the product is equipped with a mechanical movement the great Seiko with a power reserve of up to 40 hours. In particular, the error of this sample is minimized, ensuring perfect accuracy.
+          </p>
+          <a href="" class="read-more">
+            Read more <i class="fa fa-caret-right"></i></a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="policy-p-card">
+          <div class="date">
+            <h3>15</h3>
+            <h4>Jun</h4>
+          </div>
+          <div class="policy-img">
+          </div>
+          <h2>Freeship quickly, buy goods freely</h2>
+          <p>Understanding the mother's suffering, from August 1 to August 15, 2023, AVAKids continues to accompany her mother during this rainy season. To help mothers reduce the difficulty in shopping for their baby, AVAKids will deliver to your home with an extremely preferential shipping fee. Just with a bill from 300 USD, mom will enjoy free delivery within 10km..a mechanical movement</p>
+          <a href="" class="read-more">
+            Read more <i class="fa fa-caret-right"></i></a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</section>
