--- a/DemoShopFE/src/app/component/client/product-details/product-details.component.html
+++ b/DemoShopFE/src/app/component/client/product-details/product-details.component.html
@@ -1,1 +1,180 @@
-<p>product-details works!</p>
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <defs>
+      <symbol xmlns="http://www.w3.org/2000/svg" id="heart" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M20.16 4.61A6.27 6.27 0 0 0 12 4a6.27 6.27 0 0 0-8.16 9.48l7.45 7.45a1 1 0 0 0 1.42 0l7.45-7.45a6.27 6.27 0 0 0 0-8.87Zm-1.41 7.46L12 18.81l-6.75-6.74a4.28 4.28 0 0 1 3-7.3a4.25 4.25 0 0 1 3 1.25a1 1 0 0 0 1.42 0a4.27 4.27 0 0 1 6 6.05Z"></path>
+      </symbol>
+
+      <symbol xmlns="http://www.w3.org/2000/svg" id="search" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39ZM11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7Z"></path>
+      </symbol>
+      <symbol xmlns="http://www.w3.org/2000/svg" id="user" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M15.71 12.71a6 6 0 1 0-7.42 0a10 10 0 0 0-6.22 8.18a1 1 0 0 0 2 .22a8 8 0 0 1 15.9 0a1 1 0 0 0 1 .89h.11a1 1 0 0 0 .88-1.1a10 10 0 0 0-6.25-8.19ZM12 12a4 4 0 1 1 4-4a4 4 0 0 1-4 4Z"></path>
+      </symbol>
+    </defs>
+  </svg>
+
+<header>
+    <div class="container">
+      <div class="row py-3 border-bottom">
+        
+        <div class="col-sm-4 col-lg-3 text-center text-sm-start">
+          <div class="main-logo">
+            <a href="index.html">
+              <img src="https://thuvienlogo.com/data/03/logo-dong-ho-dep-03.jpg" width="180px" alt="logo" class="img-fluid">
+            </a>
+          </div>
+        </div>
+     
+        
+        <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
+          <div class="search-bar row bg-light p-2 my-2 rounded-4 align-items-center">
+            <div class="col-md-4 d-none d-md-block" >
+              <select class="form-select border-0 bg-transparent" >
+                <option>Categories</option>
+                <option>Japanese Watches</option>
+                <option>Swiss Watches</option>
+                <option>French Watches</option>
+              </select>
+            </div>
+            <div class="col-11 col-md-7">
+              <form id="search-form" class="text-center" action="" method="">
+                <input type="text" class="form-control border-0 bg-transparent" placeholder="Search...">
+              </form>
+            </div>
+            <div class="col-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" ><path fill="currentColor" d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39ZM11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7Z"></path></svg>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-sm-8 col-lg-4 d-flex justify-content-end gap-5 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
+          
+          <ul class="d-flex justify-content-end list-unstyled m-0">
+            <li>
+              <a routerLink="login" class="rounded-circle bg-light p-2 mx-1 text-dark">
+                <svg width="24" height="24" viewBox="0 0 24 24"><use xlink:href="#user"></use></svg>
+              </a>
+            </li>
+            <li>
+
+            <li>
+              <a (click)="onLogout()" ><img src="https://img.icons8.com/?size=1x&id=2445&format=png"width="24px" height="24px" style="margin-left: 20px;" class="img-fluid">
+              </a>
+            </li>
+            <li class="d-lg-none">
+              <a href="#" class="rounded-circle bg-light p-2 mx-1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">
+                <svg width="24" height="24" viewBox="0 0 24 24"><use xlink:href="#cart"></use></svg>
+              </a>
+            </li>
+            <li class="d-lg-none">
+              <a href="#" class="rounded-circle bg-light p-2 mx-1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSearch" aria-controls="offcanvasSearch">
+                <svg width="24" height="24" viewBox="0 0 24 24"><use xlink:href="#search"></use></svg>
+              </a>
+            </li>
+          </ul>
+
+          <div class="cart text-end d-none d-lg-block dropdown">
+            <button class="border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">
+              <span class="fs-6 text-muted dropdown-toggle">Your Cart</span>
+              <h5 class="mb-0"><span class="cart-total">{{cartService.items.length}} Product</span></h5>
+            </button>
+          </div>
+
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row py-3">
+        <div class="d-flex  justify-content-center justify-content-sm-between align-items-center">
+          <nav class="main-menu d-flex navbar navbar-expand-lg">
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+
+              <div class="offcanvas-header justify-content-center">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+
+              <div class="offcanvas-body">
+            
+                <select class="filter-categories border-0 mb-0 me-5">
+                  <option>Shop by Departments</option>
+                  <option>Groceries</option>
+                  <option>Drinks</option>
+                  <option>Chocolates</option>
+                </select>
+                <ul class="navbar-nav justify-content-end menu-list list-unstyled d-flex gap-md-3 mb-0">
+                  <li class="nav-item active">
+                    <a href="#women" class="nav-link">Women</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a href="#men" class="nav-link">Men</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#kids" class="nav-link">Kids</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#accessories" class="nav-link">Accessories</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
+                    <ul class="dropdown-menu" aria-labelledby="pages">
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#brand" class="nav-link">Brand</a>
+                  </li>
+                  <li class="nav-item">
+                  </li>
+                  <li class="nav-item">
+                    <a href="#sale" class="nav-link">Sale</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#blog" class="nav-link">Blog</a>
+                  </li>
+                </ul>
+              
+              </div>
+
+            </div>
+
+          </nav>
+          <div class="d-none d-lg-block">
+            <a href="#" class="nav-link btn-coupon-code">
+              <img src="assets/gift.svg">
+              <strong class="ms-2">Get your coupon code</strong>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<br>
+<br>
+
+  <div class="row product-details" *ngIf="productData">
+    <div class="col-sm-6">
+    <img  class="product-img" src="{{productData.image_url}}" alt="" width="600px">
+    </div>
+    <div class="col-sm-6">
+        <div class="details">
+            <h1>{{productData.name}}</h1>
+            <h3>Price : {{productData.price | currency:'USD'}}</h3>
+            <div>Color :<h3 [style.backgroundColor]="productData.color" class="product-color"></h3></div>
+            <h6>Category : {{productData.category_id}}</h6>
+            <h6>brand : {{productData.brand}}</h6>
+            <h6>material : {{productData.material}}</h6>
+            <h6>Description : {{productData.description}}</h6>
+            <a href="#" (click)="addToCart(productData)" class="btn btn-primary" style="background-color: #007bff;">Add to cart</a>
+            <div class="quantity-group">
+              <button (click)="handleQuantity('min')" >-</button>
+              <input type="text" value="{{quantity}}" />
+              <button (click)="handleQuantity('plus')">+</button>
+          </div>
+        </div>
+    </div>
+    </div>
