--- a/DemoShopFE/src/app/component/client/register/register.component.html
+++ b/DemoShopFE/src/app/component/client/register/register.component.html
@@ -1,4 +1,3 @@
-
 <br>
 <br>
 
@@ -9,7 +8,8 @@
       <label for="username">Username</label>
       <input type="username" name="username" class="form-control" [(ngModel)]="username" #usernameModel="ngModel" required username>
       <div *ngIf="usernameModel.invalid && usernameModel.touched" class="alert alert-danger">
-        Vui lòng nhập tên người dùng của bạn.
+   
+Please enter your username.
       </div>
 
     </div>
@@ -17,7 +17,8 @@
       <label for="email">Email</label>
       <input type="email" name="email" class="form-control" [(ngModel)]="email" #emailModel="ngModel" required email>
       <div *ngIf="emailModel.invalid && emailModel.touched" class="alert alert-danger">
-        Vui lòng nhập địa chỉ email của bạn.
+    
+Please enter your email address.
       </div>
     </div>
 
@@ -27,15 +28,15 @@
       <label for="full_name">Full Name</label>
       <input type="full_name" name="full_name" class="form-control" [(ngModel)]="full_name" #full_nameModel="ngModel" required full_name>
       <div *ngIf="full_nameModel.invalid && full_nameModel.touched" class="alert alert-danger">
-        Vui lòng nhập tên của bạn.
+    Please enter your name.
       </div>
 
     </div>
     <div class="form-group">
       <label for="phone">Phone</label>
-      <input type="phone" name="phone" class="form-control" [(ngModel)]="phone" #phoneModel="ngModel" required phone>
+      <input type="tel" name="phone" class="form-control" [(ngModel)]="phone" #phoneModel="ngModel" required phone  maxlength="11">
       <div *ngIf="phoneModel.invalid && phoneModel.touched" class="alert alert-danger">
-        Vui lòng nhập số điện thoại của bạn.
+        Please enter your phone number
       </div>
 
     </div>
@@ -43,7 +44,8 @@
       <label for="address">Address</label>
       <input type="address" name="address" class="form-control" [(ngModel)]="address" #addressModel="ngModel" required address>
       <div *ngIf="addressModel.invalid && addressModel.touched" class="alert alert-danger">
-        Vui lòng nhập địa chỉ của bạn.
+         
+         Please enter your address.
       </div>
 
     </div>
@@ -57,33 +59,30 @@
       </select>
 
     </div>
-    <!-- <div class="form-group">
+    <div class="form-group">
       <label for="birthday">Birthday</label>
-      <input type="birthday" name="birthday" class="form-control" [(ngModel)]="birthday" #birthdayModel="ngModel" required birthday>
+      <input type="text" name="birthday" class="form-control" [(ngModel)]="birthday" #birthdayModel="ngModel" required birthday>
       <div *ngIf="birthdayModel.invalid && birthdayModel.touched" class="alert alert-danger">
-        Vui lòng nhập ngày sinh của bạn.
+        Please enter your date of birth.
       </div>
-    </div> -->
+    </div>
 
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" name="password" class="form-control" [(ngModel)]="password" #passwordModel="ngModel" required password minlength="6" maxlength="20">
-<div *ngIf="passwordModel.invalid && passwordModel.touched" class="alert alert-danger">
-        Vui lòng nhập mật khẩu của bạn.
+      <div *ngIf="passwordModel.invalid && passwordModel.touched" class="alert alert-danger">
+        Please enter your password.
       </div>
 
     </div>
     <div class="form-group">
       <label for="password_confirmation">Confirm Password</label>
-      <input type="password" class="form-control" name="password_confirmation"
-        [(ngModel)]="password_confirmation" required #password_confirmationModel="ngModel">
-
+      <input type="password" class="form-control" name="password_confirmation" [(ngModel)]="password_confirmation" password minlength="6" maxlength="20"
+      required compareValidator="password" #password_confirmationModel="ngModel">
+      <div *ngIf="password_confirmationModel.invalid && password_confirmationModel.touched" class="alert alert-danger">
+        Confirmation password does not match.
+      </div>
     </div>
-
     <button type="submit"class="btn btn-primary" >Register</button>
-    
   </form>
-  <br>
-  <h5>Want to Create Account ? <a routerLink="/login" >Click Here</a></h5>
 </div>
-
