--- a/DemoShopFE/src/app/component/client/login/login.component.html
+++ b/DemoShopFE/src/app/component/client/login/login.component.html
@@ -1,21 +1,20 @@
+<br>
+<br>
+<br>
+<form (ngSubmit)="onSubmit()">
 
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
-    <h1><p style="text-align: center;">Login </p></h1>
-    <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" id="username" formControlName="username" ngModel class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" id="password" formControlName="password" class="form-control">
-    </div>
-    <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
-    <br>
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" [(ngModel)]="username"><br>
+
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" [(ngModel)]="password"><br>
+  <div class="alert alert-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
+  <button type="submit">Submit</button>
+<br>
     <h5>Want to Create Account ? <a routerLink="/register" >Click Here</a></h5>
-  </form>
-  
-  
-  
-  
-  
-  
+</form>
+
+
+
+
+
