--- a/DemoShopFE/src/app/component/client/product-details/product-details.component.css
+++ b/DemoShopFE/src/app/component/client/product-details/product-details.component.css
@@ -5,41 +5,41 @@
     align-items: center;
     margin-top: 20px;
   }
-  
+
   /* Thiết kế cho hình ảnh sản phẩm */
   .product-img {
     width: 100%;
     max-width: 400px;
   }
-  
+
   /* Thiết kế cho các chi tiết sản phẩm */
   .details {
     padding: 20px;
   }
-  
+
   .details h1 {
     font-size: 24px;
     margin-bottom: 10px;
   }
-  
+
   .details h3 {
     font-size: 18px;
     margin-bottom: 5px;
   }
-  
+
   .product-color {
     display: inline-block;
     width: 20px;
     height: 20px;
     margin-bottom: 5px;
   }
-  
+
   .quantity-group {
     display: flex;
     align-items: center;
     margin-top: 10px;
   }
-  
+
   .quantity-group button {
     width: 30px;
     height: 30px;
@@ -48,7 +48,7 @@
     border: none;
     cursor: pointer;
   }
-  
+
   .quantity-group input {
     width: 50px;
     height: 30px;
@@ -57,3 +57,59 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+  .stars {
+    display: inline-block;
+    width: 100px;
+    height: 20px;
+    background: url('https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678064-star-512.png');
+    background-size: contain;
+  }
+
+  .stars:before {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 20px;
+    background: url('https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678064-star-512.png');
+    background-size: contain;
+    transition: width 0.2s;
+  }
+
+  .stars:hover:before {
+    width: 20px;
+  }
+
+  .stars:after {
+    content: ' ';
+    display: block;
+    clear: both;
+  }
+
+  .stars input {
+    display: none;
+  }
+
+  .stars label {
+    float: right;
+    padding: 0 4px;
+    cursor: pointer;
+  }
+
+  .stars .active:before {
+    width: 100%;
+  }
+
+  .rating {
+    display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+  .evaluate {
+    font-weight: bold;
+  }
+
+  .comment {
+    font-weight: bold;
+  }
+  
