--- a/DemoShopFE/src/app/component/client/product-details/product-details.component.html
+++ b/DemoShopFE/src/app/component/client/product-details/product-details.component.html
@@ -16,7 +16,7 @@
 <header>
     <div class="container">
       <div class="row py-3 border-bottom">
-        
+
         <div class="col-sm-4 col-lg-3 text-center text-sm-start">
           <div class="main-logo">
             <a href="index.html">
@@ -24,8 +24,8 @@
             </a>
           </div>
         </div>
-     
-        
+
+
         <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
           <div class="search-bar row bg-light p-2 my-2 rounded-4 align-items-center">
             <div class="col-md-4 d-none d-md-block" >
@@ -46,9 +46,9 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-sm-8 col-lg-4 d-flex justify-content-end gap-5 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
-          
+
           <ul class="d-flex justify-content-end list-unstyled m-0">
             <li>
               <a routerLink="login" class="rounded-circle bg-light p-2 mx-1 text-dark">
@@ -98,7 +98,7 @@
               </div>
 
               <div class="offcanvas-body">
-            
+
                 <select class="filter-categories border-0 mb-0 me-5">
                   <option>Shop by Departments</option>
                   <option>Groceries</option>
@@ -135,7 +135,7 @@
                     <a href="#blog" class="nav-link">Blog</a>
                   </li>
                 </ul>
-              
+
               </div>
 
             </div>
@@ -163,6 +163,17 @@
     <div class="col-sm-6">
         <div class="details">
             <h1>{{productData.name}}</h1>
+            <a class="col-md-2" href="product-reviews/{{ productData.id }}"><span><svg xmlns="http://www.w3.org/2000/svg"
+              width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
+              <path
+                d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+              <path
+                d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z" />
+            </svg></span></a>
+            <div class="average-rating">
+              <span class="stars"></span>
+              <span class="rating">{{ calculateAverageRating().toFixed(1) }}</span>
+            </div>
             <h3>Price : {{productData.price | currency:'USD'}}</h3>
             <div>Color :<h3 [style.backgroundColor]="productData.color" class="product-color"></h3></div>
             <h6>Category : {{productData.category_id}}</h6>
@@ -177,4 +188,15 @@
           </div>
         </div>
     </div>
+    </div>
+<br>
+<br>
+
+    <h2  style="margin-left: 100px;">Product Reviews</h2>
+    <div *ngFor="let review of reviews.reviews" style="margin-left: 120px;">
+      <p>{{ review.user_id }}</p>
+
+      <p>: {{ review.created_at }}</p>
+      <p class="evaluate">Evaluate: {{ review.rating }}</p>
+      <p class="comment">Comment: {{ review.comment }}</p>
     </div>
