--- a/DemoShopFE/src/app/component/client/register/register.component.html
+++ b/DemoShopFE/src/app/component/client/register/register.component.html
@@ -2,57 +2,46 @@
 <br>
 
 <div class="form-container">
-  <h1><p style="text-align: center;">Register </p></h1>
+  <h1>
+    <p style="text-align: center;">Register </p>
+  </h1>
   <form (ngSubmit)="onSubmit()" #registerForm="ngForm">
     <div class="form-group">
-      <label for="username">Username</label>
-      <input type="username" name="username" class="form-control" [(ngModel)]="username" #usernameModel="ngModel" required username>
-      <div *ngIf="usernameModel.invalid && usernameModel.touched" class="alert alert-danger">
-   
-Please enter your username.
-      </div>
-
+      <label for="username">User Name </label>
+      <input type="text" id="username" name="username" [(ngModel)]="username" maxlength="20">
+      <div *ngIf="usernameError">{{ usernameError }}</div>
     </div>
     <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" name="email" class="form-control" [(ngModel)]="email" #emailModel="ngModel" required email>
-      <div *ngIf="emailModel.invalid && emailModel.touched" class="alert alert-danger">
-    
-Please enter your email address.
-      </div>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" [(ngModel)]="email">
+      <div *ngIf="emailError">{{ emailError }}</div>
     </div>
 
 
 
     <div class="form-group">
       <label for="full_name">Full Name</label>
-      <input type="full_name" name="full_name" class="form-control" [(ngModel)]="full_name" #full_nameModel="ngModel" required full_name>
-      <div *ngIf="full_nameModel.invalid && full_nameModel.touched" class="alert alert-danger">
-    Please enter your name.
-      </div>
+      <input type="text" id="full_name" name="full_name" [(ngModel)]="full_name">
+      <div *ngIf="full_nameError">{{ full_nameError }}</div>
 
     </div>
     <div class="form-group">
       <label for="phone">Phone</label>
-      <input type="tel" name="phone" class="form-control" [(ngModel)]="phone" #phoneModel="ngModel" required phone  maxlength="11">
-      <div *ngIf="phoneModel.invalid && phoneModel.touched" class="alert alert-danger">
-        Please enter your phone number
-      </div>
+      <input type="tel" [id]="phone" name="phone" [(ngModel)]="phone" #phoneModel="ngModel" required phone
+        [minlength]="10" maxlength="11">
+
 
     </div>
     <div class="form-group">
       <label for="address">Address</label>
-      <input type="address" name="address" class="form-control" [(ngModel)]="address" #addressModel="ngModel" required address>
-      <div *ngIf="addressModel.invalid && addressModel.touched" class="alert alert-danger">
-         
-         Please enter your address.
-      </div>
+      <input type="text" [id]="address" name="address" [(ngModel)]="address" #addressModel="ngModel" required="address">
+
 
     </div>
     <div class="form-group">
       <label for="gender">Gender</label>
-      <select class="form-control" id="gender" name="gender" [(ngModel)]="gender" required>
-        <option value="">Select gender</option>
+      <select type="text" id="gender" name="gender" [(ngModel)]="gender" required>
         <option value="male">Male</option>
         <option value="female">Female</option>
         <option value="other">Other</option>
@@ -61,28 +50,21 @@ Please enter your email address.
     </div>
     <div class="form-group">
       <label for="birthday">Birthday</label>
-      <input type="text" name="birthday" class="form-control" [(ngModel)]="birthday" #birthdayModel="ngModel" required birthday>
-      <div *ngIf="birthdayModel.invalid && birthdayModel.touched" class="alert alert-danger">
-        Please enter your date of birth.
-      </div>
+      <input type="date" [id]="birthday" [(ngModel)]="birthday" #birthdayModel="ngModel" required birthday>
     </div>
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" name="password" class="form-control" [(ngModel)]="password" #passwordModel="ngModel" required password minlength="6" maxlength="20">
-      <div *ngIf="passwordModel.invalid && passwordModel.touched" class="alert alert-danger">
-        Please enter your password.
-      </div>
+      <input type="password" id="password" name="password" [(ngModel)]="password">
+      <div *ngIf="passwordError">{{ passwordError }}</div>
 
     </div>
     <div class="form-group">
       <label for="password_confirmation">Confirm Password</label>
-      <input type="password" class="form-control" name="password_confirmation" [(ngModel)]="password_confirmation" password minlength="6" maxlength="20"
-      required compareValidator="password" #password_confirmationModel="ngModel">
-      <div *ngIf="password_confirmationModel.invalid && password_confirmationModel.touched" class="alert alert-danger">
-        Confirmation password does not match.
-      </div>
+      <input type="password" id="password_confirmation" name="password_confirmation"
+        [(ngModel)]="password_confirmation">
+      <div *ngIf="passwordConfirmationError">{{ passwordConfirmationError }}</div>
     </div>
-    <button type="submit"class="btn btn-primary" >Register</button>
+    <button type="submit" class="btn btn-primary">Register</button>
   </form>
 </div>
